[tool.poetry]
name = "cloud-run-fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Sam Yao <sam@cloud-ace.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
